Fixed segmentation fault when using CTRL+Left/Right on a panel with invalid path

FIXED: [ 462086 ]  Segmentation fault when using CTRL+Left/Right on a panel with invalid path
BUG: 462086

Discussion: https://invent.kde.org/utilities/krusader/-/merge_requests/117
(cherry picked from commit 2938db287f95a772792420f887dec2d88413409b)